# rs-hasub2

./: Cargo.toml  Hackthon Consensus Video.mp4Zone.Identifier  README.md  dev-deploy.sh
neardev/: dev-account  dev-account.env
res/: rs_hasub2.wasm  rs_ncddemo.wasm
src/: lib.rs
